Finished sales views page to display the sales employee sales and commission

--- a/payroll/app/views/employees/index.html.erb
+++ b/payroll/app/views/employees/index.html.erb
@@ -1,8 +1,9 @@
 <p>List your employees here</p>
   <table>
-    <tr>
+    <tr align="center">
       <th> First name </th>
       <th> Last name </th>
+      <th> Title </th>
       <th> Gross pay </th>
       <th> Net pay </th>
     </tr>
@@ -11,18 +12,21 @@
       <% if employee['pay_structure'] == 'owner' %>
         <td><h3><mark><%= employee['first_name'] %></mark></h3></td>
         <td><h3><mark><%= employee['last_name'] %></mark></h3></td>
+        <td><%= employee['pay_structure'] %></td>
         <td><%= employee['gross_pay'] %></td>
         <td><%= employee['net_pay'] %></td>
       </tr>
       <% elsif employee['pay_structure'] == 'commission' %>
         <td><font color='green'><b><%= employee['first_name'] %></b></font></td>
         <td><font color='green'><b><%= employee['last_name'] %></b></font></td>
-        <td><font color='green'><b><%= employee['gross_pay'] %></b></font></td>
-        <td><font color='green'><b><%= employee['net_pay'] %></b></font></style></td>
+        <td><%= employee['pay_structure'] %></td>
+        <td><%= employee['gross_pay'] %></td>
+        <td><%= employee['net_pay'] %></td>
       </tr>
       <% else %>
         <td><%= employee['first_name'] %></td>
         <td><%= employee['last_name'] %></td>
+        <td><%= employee['pay_structure'] %></td>
         <td><%= employee['gross_pay'] %></td>
         <td><%= employee['net_pay'] %></td>
       <% end %>
